# Professor-E.-Gadds-Workshop

./: .gitignore  01-setup.sh  02-run.sh  Cargo.toml  Dockerfile  LICENSE  README.md  aoc.py  aoc1.sh  aoret.py  cleansweep7.sh  day9.ex  setup.sh  shrimpner.js  shrimpner.ts  test.py  test2.txt
01-sqlx/: Cargo.toml
01-sqlx/src/: main.rs
02-rusqlite/: README.md
C-program/: 2d.c  a.out  arr.c  test.c
GPU/: a  depl.sh  host.c  kernel.cl  scripte.sh
MLX/: xor.py
ShrimpHarvest/: readme.md
aigadd/: app.py  model.py
colors/: vimtheme
commit/: fzf.sh  gum.sh
cpp/: str
cpp/OddEcho/: a.out  main.cc
cpp/add/: a.out  main.cc
cpp/aoc1/: a.out  main.cc
cpp/cold-puter/: a.out  main.cc
cpp/cov/: a.out  main.cc
cpp/twostones/: a.out  main.cc
experimentalRust/: Cargo.toml  README.md  nix-setup.md
golang/: Dockerfile
golang/scripts/: build.sh  gum_mac_test_endpoints.sh  mac_test_endpoints.sh  pager.sh  test.sh  test_endpoints.sh
golang/src/: authorize.go  go.mod  handlers.go  main.go  store.db  store.go
lua/: test.lua  test2.lua
processing4/: HLine.java  shrinkingSquare.java
python/: ExceptionHandling.py  armstrong.sh  armstrongnumbers.py  bag.py  class.py  http.py  test.py  test2.py
random/: snake.c  test.c
rocky/: Dockerfile  build.sh  entry.sh  wrapper.sh
rusqlite/: Cargo.toml
rust/: 00-README.md  install-deps.sh
scrapper/: 10-louislittprunee.sh  Dockerfile
sql_jr_repl/: Cargo.toml
tedp/: a.out  hi.cpp  size_t.cpp  test.cpp  test.sh  tester.cpp
tedtactoe/: tedtactoe.java
tensor/: tensor.py
terminal/: Transparency
(+54 files in other folders)
